This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
7/2/18: Fixed returned image not being reduced correctly when aligning K2
images with binning 3 or 6.

7/2/18: Added a small delay per frame to startup delay in K2 with dose
fractionation.  Revised camera timing output and instructions to tell people
just to use the minimum StartupDelay instead of changing the allowed minimum.

6/29/18: Improved sychronization between acquisition and post-actions to
prevent image shift from starting before end of exposure on K2.  Prevented
post-actions from starting too soon on a shot after a K2 early return, which
is critical for multiple Records.

6/29/18: Fixed multishot option to do early return only on last shot, and to
not restore image shift/beam tilt on STOP during an acquisition, but have the
camera module do it when the image is finished; also synchronized with current
dialog settings if it is open.

6/29/18: Added script commands to enter a string in a text box, and to compare
strings.

6/26/18: Made Navigator find map files when loading or merging a Nav file and
allow more flexible locations of files as long as relative locations are
maintained.

6/26/18: On JEOL, when changing low dose areas at same mag and different
alphas, do image and beam shifts at same alpha in each direction.

6/26/18: Changed Setup Full Montage to avoid loss of corner pieces when stage
is at oblique angle.

6/24/18: Additional K3 developments for using hardware binning in continuous
mode and for saving frames; properties, dialogs, and setup documented.

6/24/18: SEM-3-6-21
6/24/18: Fixed wrong defocus offset being saved for View anchor map (In 3.6).

6/17/18: SEM_3-6-20
6/15/18: Fixed check for assigning to persistent variable as regular and vice
versa.
