@@ -111,7 +111,7 @@
       <BR>
       <A HREF="hidd_gainreference.htm">Gain Reference dialog</A>
       <BR>
-      <A HREF="hidd_de_reference.htm">GDirect Electron Server Reference Maker dialog</A>
+      <A HREF="hidd_de_reference.htm">Direct Electron Server Reference Maker dialog</A>
       <BR>
       <A HREF="hidd_refpolicy.htm">Gain Reference Policy dialog</A>
       <BR>
