@@ -3,6 +3,13 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+7/10/18: Added script commands to report on next Nav item to be acquired,
+change item labels and colors, make an anchor map, and strip digits from the
+end of a string.
+
+7/10/18: Fixed crash after getting an error setting up K2 saving/aligning,
+fixed buffer overrun and crash with long defect file names.
+
 7/2/18: Fixed returned image not being reduced correctly when aligning K2
 images with binning 3 or 6.
 
